--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Cristian Tole, and Bootstrap contributors">
-  <title>RST 2.0</title>
+  <title>RST</title>
 
   <link rel="icon" href="img/icon.png" type="image/x-icon">
 
@@ -21,32 +21,28 @@
   <link href="ccs/carousel.rtl.css" rel="stylesheet">
   <link href="ccs/carousel.css" rel="stylesheet">
   <link href="ccs/bootstrap.min.css" rel="stylesheet">
-  <link href="ccs/main.css" rel="stylesheet">
+  <link href="ccs/index.css" rel="stylesheet">
 
   <!-- Custom js -->
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/color-modes.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/index.js"></script>
 </head>
 
 <body>
-  <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+  <svg class="d-none">
     <symbol id="check2" viewBox="0 0 16 16">
-      <path
-        d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
+      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
     </symbol>
     <symbol id="circle-half" viewBox="0 0 16 16">
       <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
     </symbol>
     <symbol id="moon-stars-fill" viewBox="0 0 16 16">
-      <path
-        d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
-      <path
-        d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
+      <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
+      <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
     </symbol>
     <symbol id="sun-fill" viewBox="0 0 16 16">
-      <path
-        d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
+      <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
     </symbol>
   </svg>
 
@@ -56,7 +52,7 @@
       <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
         <use href="#circle-half"></use>
       </svg>
-      <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
+      <span class="visually-hidden" id="bd-theme-text"></span>
     </button>
     <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
       <li>
@@ -103,7 +99,7 @@
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
         <!-- <a class="navbar-brand" href="#">RST</a> -->
-        <img src="img/LogoSinFondoRST-1.png" alt="Descripción de la imagen" style="width: 5rem;">
+        <img src="img/LogoSinFondoRST-1.png" alt="Descripción de la imagen" style="width: 5rem;" href="./index.html">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -111,7 +107,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="./main.html">Inicio</a>
+              <a class="nav-link " aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./quienesSomos.html">Quienes somos</a>
@@ -122,58 +118,54 @@
             <li class="nav-item">
               <a class="nav-link" href="./contact.html">Contacto</a>
             </li>
-            <!-- <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li> -->
           </ul>
-          <!-- <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form> -->
         </div>
       </div>
     </nav>
   </header>
 
+
   <main>
 
     <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
-          aria-label="Slide 1"></button>
+        <!-- <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button> -->
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <!-- <svg class="bd-placeholder-img" width="100%" src="img/LogoSinFondoRST-1.png" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg> -->
-          <img class="bd-placeholder-img" src="img/center.jpg" alt="Imagen_Contact" style="width: 100%; height: auto;">
+          <img class="bd-placeholder-img" src="img/center.jpg" alt="Imagen_Contact" style="width: 100%; height: 50vh;">
           <div class="container">
-            <div class="carousel-caption text-start">
-              <h1>Contact Center.</h1>
-              <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Contactanos</a></p>
+            <div class="carousel-caption" style="color: rgb(255, 255, 255) !important;">
+              <h1>Contact Center</h1>
+              <p style="width: 50%; margin: 0 0 0 0%;">Administramos las relaciones con sus clientes, con enfoque de calidad, basados en las mejores prácticas de gestión, mediante diferentes canales de comunicación</p>
+              <p>
+                <a class="btn btnContact" href="./contact.html">Contactanos</a>
+              </p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="bd-placeholder-img" src="img/cobranza.jpg" alt="Imagen_Cobranza"
+          <img class="bd-placeholder-img" src= "img/cobranza.jpg" alt="Imagen_Cobranza"
             style="width: 100%; height: auto;">
           <div class="container">
-            <div class="carousel-caption">
-              <h1>Cobranza.</h1>
-              <p>Some representative placeholder content for the second slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Contactanos</a></p>
+            <div class="carousel-caption text-start"  style="color: rgb(0, 0, 0) !important;">
+              <h1>Cobranza</h1>
+              <p style="width: 50%;">Contamos con equipos de trabajo integrales, con gran experiencia, comprometidos en el cumplimiento de las metas y el mejoramiento de los indicadores de cartera.</p>
+              <p><a class="btn btnContact" href="./contact.html">Contactanos</a></p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
           <img class="bd-placeholder-img" src="img/banca.jpg" alt="Imagen_Banca" style="width: 100%; height: auto;">
           <div class="container">
-            <div class="carousel-caption text-end">
-              <h1>Banck Office</h1>
-              <p>Some representative placeholder content for the third slide of this carousel.</p>
-              <p><a class="btn btn-lg btn-primary" href="#">Contactanos gallery</a></p>
+            <div class="carousel-caption text-start" style="color: rgb(255, 255, 255) !important;">
+              <h1>Back Office</h1>
+              <p style="width: 50%; margin: 0 0 0 0%;">Generamos eficiencia en todo el manejo de la documentación física o electrónica que requieren sus procesos de negocio y/o actividades repetitivas que pueden ser realizadas por equipos calificados</p>
+                <p><a class="btn btnContact" href="./contact.html">Contactanos</a></p>
             </div>
           </div>
         </div>
@@ -188,18 +180,36 @@
       </button>
     </div>
 
-    <div class="px-3" style= "margin: 0 0 0 20%; text-align: center;">
-      <h1 style="width: 80%;">RST ASOCIADOS</h1>
-      <p class="lead" style="width: 80%">Somos una empresa con más de 10 años de experiencia que ofrece servicios de 
+
+    <div class="px-3 divRST">
+      <h1 style="width: 100%;">RST ASOCIADOS</h1>
+      <p class="lead" style="font-weight: 375;">Somos una empresa con más de 10 años de experiencia que ofrece servicios de 
         Contact Center y Asesoría Jurídica Especializada. Nos destacamos por nuestro dinámico proceso 
         de crecimiento y desarrollo, contando con un equipo multidisciplinario de profesionales calificados 
         comprometidos en proporcionar soluciones integrales de valor y excelencia. Nuestro principal 
-        objetivo es la satisfacción del cliente en todas nuestras líneas de negocio..</p>
+        objetivo es la satisfacción del cliente en todas nuestras líneas de negocio.</p>
     </div>
-    
-   
 
-    
+    <div class="row align-items-md-stretch" style="width: 96%;margin: 0px 0 0 2.5%;">
+      <div class="col-md-6">
+        <div class="h-100 border rounded-3 divMV">
+          <h2 style="text-align: center;">Misión</h2>
+          <p class="lead" style="font-weight: 375;">Satisfacer las necesidades de servicios integrales de los clientes, con el fin de que mantengan su 
+            preferencia por la compañía y para asegurar la rentabilidad de los socios, así como la oportunidad de 
+            crecimiento tanto para la empresa como para sus miembros.</p>
+          <!-- <button class="btn btn-outline-light" type="button">Example button</button> -->
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="h-100 border rounded-3 divMV">
+          <h2 style="text-align: center;">Visión</h2>
+          <p class="lead" style="font-weight: 375;">Ser percibidos en el 2025 como una organización colombiana con presencia nacional e internacional 
+            que obtiene los mejores resultados en términos de rentabilidad, oportunidad y efectividad en las 
+            diferentes líneas de negocio de la compañía. </p>
+          <!-- <button class="btn btn-outline-secondary" type="button">Example button</button> -->
+        </div>
+      </div>
+    </div>   
 
     <hr class="featurette-divider">
     <!-- FOOTER -->
