Resolviendo problema letra

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <img class="bd-placeholder-img" style="width: 3rem; margin: 1.5rem 0 0% 0%; height: 3rem;"  
             src="img/investigacion-1.png" alt="Imagen_Banca">
           </div>
-          <p class="fw-normal">INVESTICACION PATRIMONIAL</p>
+          <p class="fw-normal">INVESTIGACIÓN PATRIMONIAL</p>
         </div>
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
