--- a/index.html
+++ b/index.html
@@ -27,96 +27,33 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/color-modes.js"></script>
   <script src="js/index.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 
 <body>
-  <svg class="d-none">
-    <symbol id="check2" viewBox="0 0 16 16">
-      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
-    </symbol>
-    <symbol id="circle-half" viewBox="0 0 16 16">
-      <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
-    </symbol>
-    <symbol id="moon-stars-fill" viewBox="0 0 16 16">
-      <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
-      <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
-    </symbol>
-    <symbol id="sun-fill" viewBox="0 0 16 16">
-      <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
-    </symbol>
-  </svg>
-
-  <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
-      aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
-      <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-        <use href="#circle-half"></use>
-      </svg>
-      <span class="visually-hidden" id="bd-theme-text"></span>
-    </button>
-    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
-      <li>
-        <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
-          aria-pressed="false">
-          <svg class="bi me-2 opacity-50" width="1em" height="1em">
-            <use href="#sun-fill"></use>
-          </svg>
-          Light
-          <svg class="bi ms-auto d-none" width="1em" height="1em">
-            <use href="#check2"></use>
-          </svg>
-        </button>
-      </li>
-      <li>
-        <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
-          aria-pressed="false">
-          <svg class="bi me-2 opacity-50" width="1em" height="1em">
-            <use href="#moon-stars-fill"></use>
-          </svg>
-          Dark
-          <svg class="bi ms-auto d-none" width="1em" height="1em">
-            <use href="#check2"></use>
-          </svg>
-        </button>
-      </li>
-      <li>
-        <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto"
-          aria-pressed="true">
-          <svg class="bi me-2 opacity-50" width="1em" height="1em">
-            <use href="#circle-half"></use>
-          </svg>
-          Auto
-          <svg class="bi ms-auto d-none" width="1em" height="1em">
-            <use href="#check2"></use>
-          </svg>
-        </button>
-      </li>
-    </ul>
-  </div>
-
-
-  <header data-bs-theme="dark">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <header data-bs-theme="dark " class="font-nav">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: rgb(0, 0, 0);">
       <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">RST</a> -->
-        <img src="img/LogoSinFondoRST-1.png" alt="Descripción de la imagen" style="width: 5rem;" href="./index.html">
+        <img class="img-logo" src="img/logoLetraBlack.jpg" alt="Descripción de la imagen " href="./index.html">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0" >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              <a class="text-nav activo" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./quienesSomos.html">Quienes somos</a>
+              <a class="text-nav" aria-current="page" href="./quienesSomos.html">Quienes somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./service.html">Servicios</a>
+              <a class="text-nav" href="./service.html">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contacto</a>
+              <a class="text-nav " href="./contact.html">Contacto</a>
             </li>
           </ul>
         </div>
@@ -125,7 +62,6 @@
   </header>
 
   <main>
-
     <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <!-- <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button> -->
@@ -193,7 +129,7 @@
       <div class="row">
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 3.5rem; margin: 1.5rem 0 0% 0%; height: 3.5rem;" 
             src="img/consultoria-3.png" alt="Imagen_Banca">
           </div>
@@ -202,7 +138,7 @@
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 3rem; margin: 1.5rem 0 0% 0%; height: 3rem;"  
             src="img/aplicaciones-1.png" alt="Imagen_Banca">
           </div>
@@ -211,7 +147,7 @@
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 3rem; margin: 1.6rem 0 0% 0%; height: 3rem;" 
             src="img/inbound.png" alt="Imagen_Banca">
           </div>
@@ -220,7 +156,7 @@
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 3rem; margin: 1.6rem 0 0% 0%; height: 3rem;"  
             src="img/outbound.png" alt="Imagen_Banca">
           </div>
@@ -229,7 +165,7 @@
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 3rem; margin: 1.5rem 0 0% 0%; height: 3rem;"  
             src="img/investigacion-1.png" alt="Imagen_Banca">
           </div>
@@ -238,7 +174,7 @@
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 3.5rem; margin: 1.2rem 0 0% 0%; height: 3.5rem;"  
             src="img/mineria-1.png" alt="Imagen_Banca">
           </div>
@@ -247,7 +183,7 @@
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 4rem; margin: 1rem 0 0% 0%; height: 4rem;"  
             src="img/call.png" alt="Imagen_Banca">
           </div>
@@ -256,7 +192,7 @@
         <!-- /.col-lg-4 ---------------------------------------------------------------------------------->
         <div class="col-lg-4"
           style="display: flex; text-align: center; width: 33%; align-content: stretch; justify-content: space-evenly; flex-direction: column;align-items: center;">
-          <div class="prueba" style="background-color: rgb(221, 221, 221); border-radius: 6rem;width: 6rem; height: 6rem;">
+          <div class="prueba icon-index">
             <img class="bd-placeholder-img" style="width: 3.6rem; margin: 1.4rem 0 0% 0%; height: 3.6rem;"  
             src="img/documento.png" alt="Imagen_Banca">
           </div>
@@ -265,43 +201,41 @@
 
       </div><!-- /.row -->
 
-      <!-- <hr class="featurette-divider"> -->
       <!-- START THE FEATURETTES -->
 
-      <div class="centrar"  style="display: flex;
-        align-items: center;
-        justify-content: space-between;
-        flex-direction: row-reverse;
-        margin: 3rem 0 0 0;"
-      >
-
+      <div class="centrar div-politica">
+        <div>
+          <img class="img-logo-poli" src="img/icon.png" alt="Descripción de la imagen " href="./index.html">
+        </div>
+        
         <button class="buttonPolitic" onclick="abrirPdfAutorizacion()" type="button">
-          Autorización Tratamiento de Datos Personales.
-          <!-- <svg class="bi ms-2" width="24" height="24"><use xlink:href="#arrow-right-short"/></svg> -->
+          Tratamiento de datos Personales.
         </button>
 
         <button class="buttonPolitic" onclick="abrirPdfPolitica()" type="button" >
-          Conoce nuestra política de tratamiento de datos.
-          <!-- <svg class="bi ms-2" width="24" height="24"><use xlink:href="#arrow-right-short"/></svg> -->
-        </button>
+          Política de tratamiento de datos.
+        </button>        
       </div>
 
       <hr class="featurette-divider">
 
-      <!-- /END THE FEATURETTES -->
+    </div>
 
-    </div><!-- /.container -->
-
+    <a href="https://wa.me/+573222496627" class="whatsapp-icon" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
 
     <!-- FOOTER -->
-    <footer class="container">
-      <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
-      <p>PBX: +601 9180404, +601 7446565 | Email: info@rstasociados.com.co</p>
-      <p>Autopista Norte #122-35, Edificio Mezco, Oficina 302 Bogotá D.C. - Colombia​</p>
-      <!-- <p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
+    <footer class="container-footer">
+      <div>
+        <p>PBX: +601 9180404, +601 7446565 | Email: info@rstasociados.com.co</p>
+        <p>Autopista Norte #122-35, Edificio Mezco, Oficina 302 Bogotá D.C. - Colombia​</p>  
+      </div>
+      <div>
+        <img class="img-logo-foot" src="img/logoLetra-remove.png" alt="Descripción de la imagen " href="./index.html">
+      </div>
     </footer>
   </main>
-
 
 </body>
 
