--- a/service.html
+++ b/service.html
@@ -27,106 +27,43 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/color-modes.js"></script>
   <script src="js/index.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  
 </head>
 
-<body>
-  <svg class="d-none">
-    <symbol id="check2" viewBox="0 0 16 16">
-      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
-    </symbol>
-    <symbol id="circle-half" viewBox="0 0 16 16">
-      <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z" />
-    </symbol>
-    <symbol id="moon-stars-fill" viewBox="0 0 16 16">
-      <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z" />
-      <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z" />
-    </symbol>
-    <symbol id="sun-fill" viewBox="0 0 16 16">
-      <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
-    </symbol>
-  </svg>
-
-  <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
-      aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
-      <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-        <use href="#circle-half"></use>
-      </svg>
-      <span class="visually-hidden" id="bd-theme-text"></span>
-    </button>
-    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
-      <li>
-        <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light"
-          aria-pressed="false">
-          <svg class="bi me-2 opacity-50" width="1em" height="1em">
-            <use href="#sun-fill"></use>
-          </svg>
-          Light
-          <svg class="bi ms-auto d-none" width="1em" height="1em">
-            <use href="#check2"></use>
-          </svg>
-        </button>
-      </li>
-      <li>
-        <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark"
-          aria-pressed="false">
-          <svg class="bi me-2 opacity-50" width="1em" height="1em">
-            <use href="#moon-stars-fill"></use>
-          </svg>
-          Dark
-          <svg class="bi ms-auto d-none" width="1em" height="1em">
-            <use href="#check2"></use>
-          </svg>
-        </button>
-      </li>
-      <li>
-        <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto"
-          aria-pressed="true">
-          <svg class="bi me-2 opacity-50" width="1em" height="1em">
-            <use href="#circle-half"></use>
-          </svg>
-          Auto
-          <svg class="bi ms-auto d-none" width="1em" height="1em">
-            <use href="#check2"></use>
-          </svg>
-        </button>
-      </li>
-    </ul>
-  </div>
-
-
-  <header data-bs-theme="dark">
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <div class="container-fluid">
-        <!-- <a class="navbar-brand" href="#">RST</a> -->
-        <img src="img/LogoSinFondoRST-1.png" alt="Descripción de la imagen" style="width: 5rem;" href="./index.html">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-          aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./quienesSomos.html">Quienes somos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./service.html">Servicios</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contacto</a>
-            </li>
-          </ul>
+  <body>
+    <header data-bs-theme="dark " class="font-nav">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: rgb(0, 0, 0);">
+        <div class="container-fluid">
+          <img class="img-logo" src="img/logoLetraBlack.jpg" alt="Descripción de la imagen " href="./index.html">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+              <li class="nav-item">
+                <a class="text-nav" aria-current="page" href="./index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="text-nav " aria-current="page" href="./quienesSomos.html">Quienes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="text-nav activo" href="./service.html">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="text-nav " href="./contact.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
-
+      </nav>
+    </header>
+  
     <main>
 
-      <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+      <div id="myCarousel" class="carousel slide mb-6 mapa" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <!-- <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button> -->
           <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -159,7 +96,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img class="bd-placeholder-img" src="img/banca.jpg" alt="Imagen_Banca" style="width: 100%; height: auto;">
+            <img class="mapa-two bd-placeholder-img" src="img/banca.jpg" alt="Imagen_Banca" style="width: 100%; height: auto;">
             <div class="container">
               <div class="carousel-caption text-start" style="color: rgb(255, 255, 255) !important;">
                 <h1>Back Office</h1>
@@ -205,16 +142,8 @@
                     </ul>
                 </div>
                 <!-- IMG------------------------------------------------- -->
-                <div class="col-md-5">
-                    <img src="./img/center1.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
-
-                    <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-                            fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-                    </svg> -->
+                <div class="col-md-5 ">
+                    <img src="./img/center1.jpg" class="mapa-two bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
                 </div>
             </div>
 
@@ -259,15 +188,7 @@
 
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="./img/cobranza3.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
-
-                    <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-                            fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-                    </svg> -->
+                    <img src="./img/cobranza3.jpg" class="mapa-two bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
                 </div>
             </div>
 
@@ -276,13 +197,9 @@
             <div class="row featurette">
                 <div class="col-md-7">
                     <h2 class="featurette-heading fw-normal lh-1">Back Office</h2>
-                    <p class="lead">Generamos eficiencia en todo el manejo de la documentación física o electrónica que
-                        requieren
-                        sus procesos de negocio y/o actividades repetitivas que pueden ser realizadas por equipos
-                        calificados, tales
-                        como verificación de documentaciones, trámites de registros o requerimientos, entre otros, lo
-                        cual le permite
-                        centrarse en las decisiones clave de su empresa.</p>
+                    <p class="lead">Nos encargamos de la gestión eficiente de la documentación física y electrónica 
+                      de su empresa, incluyendo la verificación de documentos y la realización de trámites. 
+                      Esto permite que su equipo se concentre en las decisiones clave del negocio.</p>
                     <dl>
                         <td>
                             <li class="lead">Entrada de datos.</li>
@@ -296,15 +213,7 @@
                 </div>
 
                 <div class="col-md-5">
-                    <img src="./img/analisisDatos.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
-
-                    <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-                            fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-                    </svg> -->
+                    <img src="./img/analisisDatos.jpg" class="mapa-two bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
                 </div>
             </div>
 
@@ -322,32 +231,29 @@
 
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <img src="./img/tecnologia.jpg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
-
-                    <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                        height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-bg)" /><text x="50%" y="50%"
-                            fill="var(--bs-secondary-color)" dy=".3em">500x500</text>
-                    </svg> -->
+                    <img src="./img/tecnologia.jpg" class="mapa-two bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="Imagen" width="100%" height="100%" style="border-radius: 1rem;">
                 </div>
             </div>
-
-            <!-- /END THE FEATURETTES -->
-
-        </div><!-- /.container -->
+        </div>
 
         <hr class="featurette-divider">
-        <!-- FOOTER -->
-        <footer class="container">
-            <!-- <p class="float-end"><a href="#">Back to top</a></p> -->
-            <p>PBX: +601 9180404, +601 7446565 | Email: info@rstasociados.com.co</p>
-            <p>Autopista Norte #122-35, Edificio Mezco, Oficina 302 Bogotá D.C. - Colombia​</p>
-            <!-- <p>&copy; 2017–2024 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p> -->
-        </footer>
-    </main>
+        
+    <!-- FOOTER -->
 
+    <a href="https://wa.me/+573222496627" class="whatsapp-icon" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>   
+
+    <footer class="container-footer">
+      <div>
+        <p>PBX: +601 9180404, +601 7446565 | Email: info@rstasociados.com.co</p>
+        <p>Autopista Norte #122-35, Edificio Mezco, Oficina 302 Bogotá D.C. - Colombia​</p>  
+      </div>
+      <div>
+        <img class="img-logo-poli" src="img/logoLetra-remove.png" alt="Descripción de la imagen " href="./index.html">
+      </div>
+    </footer>
+  </main>
 
 </body>
 
